--- a/src/app/booking-list/booking-list.component.html
+++ b/src/app/booking-list/booking-list.component.html
@@ -12,6 +12,7 @@
           @if(activeOrder){
             <mat-accordion>
               @for (item of list; track $index) {
+                @if (item.isActive) {
                   <mat-expansion-panel class="each-items">
                       <mat-expansion-panel-header>
                         <mat-panel-title>
@@ -55,6 +56,7 @@
                         <div class="field-value">{{item.address}}</div>
                       </div>
                     </mat-expansion-panel>
+                }
               }
               
               <!-- <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
@@ -74,6 +76,7 @@
           @else {
             <mat-accordion>
               @for (item of list; track $index) {
+                @if (!item.isActive) {
                   <mat-expansion-panel class="each-items">
                       <mat-expansion-panel-header>
                         <mat-panel-title>
@@ -114,6 +117,7 @@
                         <div class="field-value">{{item.address}}</div>
                       </div>
                     </mat-expansion-panel>
+                }
               }
               
               <!-- <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
