--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -11,46 +11,26 @@
     </div>
 
     <div class="main-2">
-        @if (!isLoggedIn && !otpSent) {
         <div class="form">
             <h2>Schedule a Pickup</h2>
             <form #mobileForm="ngForm" (ngSubmit)="onSubmit(mobileForm)" class="mobile-form">
                 <div class="form-group">
-                    <label for="mobileNumber">Mobile Number</label>
-                    <input type="text" class="form-control" id="mobileNumber" name="mobileNumber" ngModel required pattern="^\+?[0-9]{10}$">
-                    <div *ngIf="mobileForm.controls['mobileNumber'].invalid && mobileForm.controls['mobileNumber'].touched"
+                    <label for="email">Email Address</label>
+                    <input type="email" class="form-control" id="email" name="email" ngModel required>
+                    <div *ngIf="mobileForm.controls['email'].invalid && mobileForm.controls['email'].touched"
                         class="text-danger">
-                        <div *ngIf="mobileForm.controls['mobileNumber'].errors?.['required']">*Mobile number is required
+                        <div *ngIf="mobileForm.controls['email'].errors?.['required']">*Email is required
                         </div>
-                        <div *ngIf="mobileForm.controls['mobileNumber'].errors?.['pattern']">*Invalid mobile number format
+                        <div *ngIf="mobileForm.controls['email'].errors?.['pattern']">*Invalid Email
                         </div>
                     </div>
+                    <label for="password">Password</label>
+                    <input type="password" class="form-control" id="password" name="password" ngModel required>
                 </div>
                 <button type="submit" class="btn btn-primary" [disabled]="mobileForm.invalid">Submit</button>
             </form>
-            <p> <i>Facing Problems?</i> Call us at <span>+91-9129473706</span></p>
+            <p [routerLink]="['/signup']"> <i >Don't Have an Account? Click here...</i></p>
         </div>
-        }
-        @else if (!isLoggedIn && otpSent) {
-            <div class="card">
-                <form #otpForm="ngForm" (ngSubmit)="otpValidation(otpForm)" class="otp-form">
-                    <label><h2>Enter the Otp Here...</h2></label>
-                    <input type="text" required name="otp" (ngModel)="otp">
-                    <small class="text-danger">*Valid for 30 seconds.</small>
-                    <button type="submit">Submit</button>
-                </form>
-            </div>
-        }
-        <!-- @else if(isLoggedIn && otpSent){
-        <div class="card">
-            <h2>Welcome Back</h2>
-            <img src="https://www.chandigarhhelp.com/wp-content/uploads/2022/02/Scrap-Buyers-in-Chandigarh-1.webp" alt="">
-            <div class="button">
-                <button [routerLink]="['register']">Schedule a PickUp</button>
-                <button [routerLink]="['bookings']">See Your Bookings</button>
-            </div>
-        </div>
-        } -->
     </div>
 </div>
 <app-landing></app-landing>
