--- a/src/app/rates/rates.component.html
+++ b/src/app/rates/rates.component.html
@@ -16,28 +16,28 @@
             <h3>Normal Recyclables</h3>
             <div class="cards">
                 <div class="boxes">
-                    <img src="https://swapeco.com/img/scrap-item/newspaper-report.png" alt="" />
+                    <img src="https://ikp.edgekit.net/h1rxzpffx/swapeco/img/scrap-item/newspaper-report.png" alt="" />
                     <p>Rs. 14/Kg</p>
                     <p class="content">NEWS PAPER</p>
                 </div>
                 <div class="boxes">
-                    <img src="https://ig.edgekit.net/62a99103d2fd560e27307f17/EbMpTQuC-paper.png" alt="" />
+                    <img src="https://ikc.edgekit.net/h1rxzpffx/scrapuncle/assets/papers_rorTDynz7.png?updatedAt=1710451407122" alt="" />
                     <p>Rs. 15/Kg</p>
                     <p class="content">OFFICE PAPER</p>
                 </div>
                 <div class="boxes">
-                    <img src="https://ik.imagekit.io/h1rxzpffx/scrapuncle/assets/ico_books_CTqSUha3X.png?ik-sdk-version=javascript-1.4.3&updatedAt=1674804437147&tr=w-64%2Ch-64%2Cfo-auto"
+                    <img src="https://ikp.edgekit.net/h1rxzpffx/swapecox/Books.webp"
                         alt="" />
                     <p>Rs. 12/Kg</p>
                     <p class="content">BOOKS</p>
                 </div>
                 <div class="boxes">
-                    <img src="https://swapeco.com/img/scrap-item/bin.png" alt="" />
+                    <img src="https://ikp.edgekit.net/h1rxzpffx/swapeco/img/scrap-item/bin.png" alt="" />
                     <p>Rs. 10/Kg</p>
                     <p class="content">PLASTICS</p>
                 </div>
                 <div class="boxes">
-                    <img src="https://swapeco.com/img/scrap-item/box.png" alt="" />
+                    <img src="https://ikp.edgekit.net/h1rxzpffx/swapeco/img/scrap-item/box.png" alt="" />
                     <p>Rs. 15/Kg</p>
                     <p class="content">CARDBOARD</p>
                 </div>
@@ -47,27 +47,27 @@
             <h3>Metals</h3>
             <div class="cards">
                 <div class="boxes">
-                    <img src="https://swapeco.com/img/scrap-item/beam.png" alt="" />
+                    <img src="https://ikp.edgekit.net/h1rxzpffx/swapeco/img/scrap-item/beam.png" alt="" />
                     <p>Rs. 25/Kg</p>
                     <p class="content">IRON</p>
                 </div>
                 <div class="boxes">
-                    <img src="https://swapeco.com/img/scrap-item/hook.png" alt="" />
+                    <img src="https://ikp.edgekit.net/h1rxzpffx/swapeco/img/scrap-item/hook.png" alt="" />
                     <p>Rs. 40/Kg</p>
                     <p class="content">STEEL</p>
                 </div>
                 <div class="boxes">
-                    <img src="https://swapeco.com/img/scrap-item/beer.png" alt="" />
+                    <img src="https://ikp.edgekit.net/h1rxzpffx/swapeco/img/scrap-item/beer.png" alt="" />
                     <p>Rs. 130/Kg</p>
                     <p class="content">ALUMINIUM</p>
                 </div>
                 <div class="boxes">
-                    <img src="https://swapeco.com/img/scrap-item/brass-nuckle.png" alt="" />
+                    <img src="https://ikp.edgekit.net/h1rxzpffx/swapeco/img/scrap-item/brass-nuckle.png" alt="" />
                     <p>Rs. 400/Kg</p>
                     <p class="content">BRASS</p>
                 </div>
                 <div class="boxes">
-                    <img src="https://swapeco.com/img/scrap-item/wire.png" alt="" />
+                    <img src="https://ikp.edgekit.net/h1rxzpffx/swapeco/img/scrap-item/wire.png" alt="" />
                     <p>Rs. 550/Kg</p>
                     <p class="content">COPPER</p>
                 </div>
@@ -77,27 +77,27 @@
             <h3>Large Appliances</h3>
             <div class="cards">
                 <div class="boxes">
-                    <img src="https://swapeco.com/img/scrap-item/air-conditioner.png" alt="" />
+                    <img src="https://ikp.edgekit.net/h1rxzpffx/swapeco/img/scrap-item/air-conditioner.png" alt="" />
                     <p>Rs. 4500/Piece</p>
                     <p class="content">AC</p>
                 </div>
                 <div class="boxes">
-                    <img src="https://swapeco.com/img/scrap-item/air-conditioner(1).png" alt="" />
+                    <img src="https://ikp.edgekit.net/h1rxzpffx/swapeco/img/scrap-item/air-conditioner(1).png" alt="" />
                     <p>Rs. 4000/Piece</p>
                     <p class="content">WINDOW AC</p>
                 </div>
                 <div class="boxes">
-                    <img src="https://swapeco.com/img/scrap-item/smart-washing-machine.png" alt="" />
+                    <img src="https://ikp.edgekit.net/h1rxzpffx/swapeco/img/scrap-item/smart-washing-machine.png" alt="" />
                     <p>Rs. 1000/Piece</p>
                     <p class="content">WASH.MACHINE</p>
                 </div>
                 <div class="boxes">
-                    <img src="https://swapeco.com/img/scrap-item/fridge.png" alt="" />
+                    <img src="https://ikp.edgekit.net/h1rxzpffx/swapeco/img/scrap-item/fridge.png" alt="" />
                     <p>Rs. 1000/Piece</p>
                     <p class="content">FRIDGE</p>
                 </div>
                 <div class="boxes">
-                    <img src="https://swapeco.com/img/scrap-item/ventilation.png" alt="" />
+                    <img src="https://ikp.edgekit.net/h1rxzpffx/swapeco/img/scrap-item/ventilation.png" alt="" />
                     <p>Rs. 30/Kg</p>
                     <p class="content">COOLER</p>
                 </div>
