--- a/src/app/admin-page/admin-page.component.scss
+++ b/src/app/admin-page/admin-page.component.scss
@@ -1,54 +1,96 @@
-.navbar{
-    display: flex;
-    align-items: center;
-    height: 70px;
-    width: 100vw;
-    background: white;
-    box-shadow: 0px 5px 10px 0px #3ab34a;
-    position: fixed;
-    top: 0;
-    z-index: 51;
-
-    .logo{
+.main-container{
+    .navbar{
         display: flex;
-        cursor: pointer;
-
-        img{
-            margin: 0px 2px 0px 20px;
-            border-radius: 50%;
-            height: 3rem;
-            width: 3rem;
+        align-items: center;
+        height: 70px;
+        width: 100vw;
+        background: white;
+        box-shadow: 0px 5px 10px 0px #3ab34a;
+        position: fixed;
+        top: 0;
+        z-index: 51;
+    
+        .logo{
+            display: flex;
+            cursor: pointer;
+    
+            img{
+                margin: 0px 2px 0px 20px;
+                border-radius: 50%;
+                height: 3rem;
+                width: 3rem;
+            }
+            h1{
+                margin-top: 10px;
+                color: #067c16;
+                font-size: 1.5rem;
+            }
         }
-        h1{
-            margin-top: 10px;
-            color: #067c16;
-            font-size: 1.5rem;
+    
+        ul{
+            background-color: white;
+            display: flex;
+            align-items: center;
+            margin: 0px 5px;
+    
+            li{
+                list-style: none;
+                margin-left: 10px;
+                color: #067c16;
+                font-size: 17px;
+                font-weight:bold;
+    
+                a{
+                    border-radius: 10px;
+                    padding: 5px;
+                    color: #067c16;
+                    text-decoration: none;
+    
+                    &:hover{
+                        color: white;
+                        background-color: #3ab34a; 
+                        font-weight: light;
+                    }
+                }
+            }
         }
     }
 
-    ul{
-        background-color: white;
+    .dashboard{
+        margin-top: 13vh;
         display: flex;
         align-items: center;
-        margin: 0px 5px;
+        justify-content: center;
 
-        li{
-            list-style: none;
-            margin-left: 10px;
-            color: #067c16;
-            font-size: 17px;
-            font-weight:bold;
+        .parent-kpi{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
 
-            a{
-                border-radius: 10px;
-                padding: 5px;
-                color: #067c16;
-                text-decoration: none;
+            .tile-container{
+                display: flex;
+                align-items: center;
+                justify-content: space-around;
+                flex-wrap: wrap;
 
-                &:hover{
+                .tile{
+                    margin: 5vh;
+                    height: 10vw;
+                    width: 30vw;
                     color: white;
-                    background-color: #3ab34a; 
-                    font-weight: light;
+                    text-align: center;
+                    letter-spacing: 2px;
+                    font-size: 20px;
+                    font-weight: 80;
+                    border-radius: 10px;
+                    cursor: pointer;
+                    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+                }
+                .tile:hover{
+                    background-color: brightness(150%);
+                    box-shadow: 10px 10px 5px rgb(210, 210, 210);
                 }
             }
         }
