--- a/src/app/roles/roles.component.html
+++ b/src/app/roles/roles.component.html
@@ -1,1 +1,100 @@
-<p>roles works!</p>
+<mat-card class="mainContainer">
+    <nav mat-tab-nav-bar class="nav">
+        @for (link of links; track link) {
+            <a mat-tab-link
+                style="font-size: 18px;  color: white !important; background-color: rgb(147, 240, 147); margin: 0 2px;"
+                (click)="activeLink = link"
+                [active]="activeLink == link"> {{link}} 
+            </a>
+        }
+    </nav>
+    @if (activeLink == 'Admins') {
+        <div style="margin-bottom: 50vh;" class="content" for="admin">
+            <div class="main">
+                <div class="list">
+                  <table style="width: 80vw;">
+                    <tr class="heading">
+                        <th>S.No.</th>
+                        <th>FirstName</th>
+                        <th>LastName</th>
+                        <th>Email</th>
+                        <th>Is Admin</th>
+                        <th>Profile Image</th>
+                    </tr>
+                    <tr [ngClass]=" e ? 'even' : 'odd'" *ngFor="let std of admins; let e=even; let o=odd; let i= index;">
+                        <td style="text-align: center;">{{i+1}}</td>
+                        <td style="text-align: center;">{{std.firstName}}</td>
+                        <td style="text-align: center;">{{std.lastName}}</td>
+                        <td style="text-align: center;">{{std.email}}</td>
+                        <td style="text-align: center;">{{std.isAdmin}}</td>
+                        <td style="text-align: center;"><img src="{{std.profileImg}}" alt="user.jpg" style="width: 4vw; height: 4vw; border-radius: 50%;"></td>
+                    </tr>
+                  </table>
+                </div>
+            </div>
+        </div>
+    }
+    
+    @else if (activeLink == 'Customers') {
+        <div class="content" for="Customers">
+            <div class="main">
+                <div class="list">
+                  <table style="width: 80vw;">
+                    <tr class="heading">
+                        <th>S.No.</th>
+                        <th>FirstName</th>
+                        <th>LastName</th>
+                        <th>Email</th>
+                        <th>Is Admin</th>
+                        <th>Profile Image</th>
+                    </tr>
+                    <tr [ngClass]=" e ? 'even' : 'odd'" *ngFor="let std of user; let e=even; let o=odd; let i= index;">
+                        <td style="text-align: center;">{{i+1}}</td>
+                        <td style="text-align: center;">{{std.firstName}}</td>
+                        <td style="text-align: center;">{{std.lastName}}</td>
+                        <td style="text-align: center;">{{std.email}}</td>
+                        <td style="text-align: center;">{{std.isAdmin}}</td>
+                        <td style="text-align: center;"><img src="{{std.profileImg}}" alt="user.jpg" style="width: 4vw; height: 4vw; border-radius: 50%;"></td>
+                    </tr>
+                  </table>
+                </div>
+            </div>
+        </div>
+    }
+    @else if (activeLink == 'Roles') {
+        <div style="height: 80vh;" class="content" for="roles">
+            <div class="main">
+                <div class="list">
+                  <table style="width: 80vw;">
+                    <tr class="heading">
+                        <th>S.No.</th>
+                        <th>Role Id</th>
+                        <th>Designation</th>
+                        <th>Creation Date</th>
+                    </tr>
+                    <tr [ngClass]=" e ? 'even' : 'odd'" *ngFor="let std of roles; let e=even; let o=odd; let i= index;">
+                        <td style="text-align: center;">{{i+1}}</td>
+                        <td style="text-align: center;">{{std._id}}</td>
+                        <td style="text-align: center;">{{std.role}}</td>
+                        <td style="text-align: center;">{{std.createdAt}}</td>
+                    </tr>
+                  </table>
+                </div>
+            </div>
+        </div>
+    }
+    @else if (activeLink == 'Add New Role') {
+        <div class="main-2">
+            <div class="form">
+                <h2>Add New Role Here</h2>
+                <form #roleForm="ngForm" (ngSubmit)="onSubmit(roleForm)" class="mobile-form">
+                    <div class="form-group">
+                        <label for="roleName">Role Name</label>
+                        <input type="text" class="form-control" id="roleName" name="roleName" ngModel required>
+                    </div>
+                    <button type="submit" class="btn btn-primary" [disabled]="roleForm.invalid">Submit</button>
+                </form>
+            </div>
+        </div>
+    }
+</mat-card>
