Added the logout button and modified the files accordingly

--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -1,5 +1,5 @@
 <div class="main-container">
-    <div class="navbar">
+    <!-- <div class="navbar">
         <div class="logo">
             <img src="https://i.pinimg.com/originals/b1/ee/59/b1ee59212c497de48b9c4a0e3157bb2a.jpg" alt="logo.png" />
             <h1>crapwala</h1>
@@ -11,7 +11,9 @@
             <li><a [routerLink]="['register-admin']">Add Admin</a></li>
             <li><a [routerLink]="['roles']">Roles Management</a></li>
         </ul>
-    </div>
+        <button style="margin-left: 20vw;" (click)="logOut()" type="button" for="logout" class="logout">Log Out
+        </button>
+    </div> -->
 
     <div class="dashboard">
         <mat-card class="parent-kpi">
