--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     fgsType="rectangle-bounce-pulse-out-rapid"
     pbColor="#2b8709"
     logoPosition="center-center"
-    logoUrl="https://thumbs.dreamstime.com/b/angular-logo-editorial-illustrative-white-background-angular-logo-editorial-illustrative-white-background-eps-download-208329119.jpg"
+    logoUrl="https://i.pinimg.com/originals/b1/ee/59/b1ee59212c497de48b9c4a0e3157bb2a.jpg"
 ></ngx-ui-loader>
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
