Modifies the image address for the app and modified the order list according to the users

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -18,7 +18,7 @@
     </div>
     <div class="box">
         <h4>Important links</h4>
-        <li>Scrap Rates</li>
+        <li [routerLink]="['rates']">Scrap Rates</li>
         <li>Blogs</li>
         <p>Made with ❤️ by 
             <b>NIKHIL JAISWAL</b>
