--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -24,28 +24,28 @@
         <h1>Why Us?</h1>
         <div class="box-2">
             <div class="box">
-                <img src="https://ik.imagekit.io/h1rxzpffx/scrapuncle/why-us/rupee_h5cohN94jkyh.png" alt="money" />
+                <img src="https://ikp.edgekit.net/h1rxzpffx/scrapuncle/why-us/rupee_h5cohN94jkyh.png" alt="money" />
                 <div class="inside">
                     <h3>Best Rates</h3>
                     <p>We provide the best value for your scrap from our network of Recyclers.</p>
                 </div>
             </div>
             <div class="box">
-                <img src="https://ik.imagekit.io/h1rxzpffx/scrapuncle/why-us/thumbs-up_vOIp-YChzZhh.png" alt="asds" />
+                <img src="https://ikp.edgekit.net/h1rxzpffx/scrapuncle/why-us/thumbs-up_vOIp-YChzZhh.png" alt="asds" />
                 <div class="inside">
                     <h3>Convenience</h3>
                     <p>Doorstep pickup according to user's convenient date & time.</p>
                 </div>
             </div>
             <div class="box">
-                <img src="https://ik.imagekit.io/h1rxzpffx/scrapuncle/why-us/trust_TmQdK2fLBVD.png" alt="sd" />
+                <img src="https://ikp.edgekit.net/h1rxzpffx/scrapuncle/why-us/trust_TmQdK2fLBVD.png" alt="sd" />
                 <div class="inside">
                     <h3>Trust</h3>
                     <p>Trained & Verified Pickup Staff with Swapeco Smart Weighing Scale</p>
                 </div>
             </div>
             <div class="box">
-                <img src="https://ik.imagekit.io/h1rxzpffx/scrapuncle/why-us/eco_wwfqNtl3n-r.png" alt="asad" />
+                <img src="https://ikp.edgekit.net/h1rxzpffx/scrapuncle/why-us/eco_wwfqNtl3n-r.png" alt="asad" />
                 <div class="inside">
                     <h3>Eco-friendly</h3>
                     <p>We ensure responsible recycling of your scrap items.</p>
