--- a/src/app/rates/rates.component.html
+++ b/src/app/rates/rates.component.html
@@ -107,27 +107,27 @@
             <h3>Small Appliances</h3>
             <div class="cards">
                 <div class="boxes">
-                    <img src="https://swapeco.com/img/scrap-item/television.png" alt="" />
+                    <img src="https://ikp.edgekit.net/h1rxzpffx/swapeco/img/scrap-item/television.png" alt="" />
                     <p>Rs. 300/piece</p>
                     <p class="content">TV</p>
                 </div>
                 <div class="boxes">
-                    <img src="https://swapeco.com/img/scrap-item/fan.png" alt="" />
+                    <img src="https://ikp.edgekit.net/h1rxzpffx/swapeco/img/scrap-item/fan.png" alt="" />
                     <p>Rs. 50/Kg</p>
                     <p class="content">FAN</p>
                 </div>
                 <div class="boxes">
-                    <img src="https://swapeco.com/img/scrap-item/generator(1).png" alt="" />
+                    <img src="https://ikp.edgekit.net/h1rxzpffx/swapeco/img/scrap-item/generator(1).png" alt="" />
                     <p>Rs. 70/Kg</p>
                     <p class="content">MOTOR</p>
                 </div>
                 <div class="boxes">
-                    <img src="https://swapeco.com/img/scrap-item/engine.png" alt="" />
+                    <img src="https://ikp.edgekit.net/h1rxzpffx/swapeco/img/scrap-item/engine.png" alt="" />
                     <p>Rs. 70/Kg</p>
                     <p class="content">INVERTER</p>
                 </div>
                 <div class="boxes">
-                    <img src="https://swapeco.com/img/scrap-item/battery.png" alt="" />
+                    <img src="https://ikp.edgekit.net/h1rxzpffx/swapeco/img/scrap-item/battery.png" alt="" />
                     <p>Rs. 100/Kg</p>
                     <p class="content">BATTERY</p>
                 </div>
@@ -137,27 +137,27 @@
             <h3>Mobiles & Computers</h3>
             <div class="cards">
                 <div class="boxes">
-                    <img src="https://swapeco.com/img/scrap-item/black-laptop.png" alt="" />
+                    <img src="https://ikp.edgekit.net/h1rxzpffx/swapeco/img/scrap-item/black-laptop.png" alt="" />
                     <p>Rs. 500/Piece</p>
                     <p class="content">LAPTOP</p>
                 </div>
                 <div class="boxes">
-                    <img src="https://swapeco.com/img/scrap-item/computer(2).png" alt="" />
+                    <img src="https://ikp.edgekit.net/h1rxzpffx/swapeco/img/scrap-item/computer(2).png" alt="" />
                     <p>Rs. 300/Piece</p>
                     <p class="content">MONITOR</p>
                 </div>
                 <div class="boxes">
-                    <img src="https://swapeco.com/img/scrap-item/tablet.png" alt="" />
+                    <img src="https://ikp.edgekit.net/h1rxzpffx/swapeco/img/scrap-item/microwave.png" alt="" />
                     <p>Rs. 50/Piece</p>
                     <p class="content">TABLET</p>
                 </div>
                 <div class="boxes">
-                    <img src="https://swapeco.com/img/scrap-item/printer.png" alt="" />
+                    <img src="https://ikp.edgekit.net/h1rxzpffx/swapeco/img/scrap-item/printer.png" alt="" />
                     <p>Rs. 70/Piece</p>
                     <p class="content">PRINTER</p>
                 </div>
                 <div class="boxes">
-                    <img src="https://swapeco.com/img/scrap-item/lamp.png" alt="" />
+                    <img src="https://ikp.edgekit.net/h1rxzpffx/swapeco/img/scrap-item/lamp.png" alt="" />
                     <p>Rs. 15/Kg</p>
                     <p class="content">LAMP</p>
                 </div>
@@ -167,13 +167,13 @@
             <h3>Others</h3>
             <div class="cards">
                 <div class="boxes">
-                    <img src="https://ik.imagekit.io/h1rxzpffx/scrapuncle/assets/car_s-IuUatKN.png?ik-sdk-version=javascript-1.4.3&updatedAt=1663839988197"
+                    <img src="https://ikp.edgekit.net/h1rxzpffx/swapecox/CarIcon.webp"
                         alt="" />
                     <p>Rs. 20,000/Kg</p>
                     <p class="content">CAR</p>
                 </div>
                 <div class="boxes">
-                    <img src="https://ik.imagekit.io/h1rxzpffx/tr:h-100/scrapuncle/item-rates/e5694fb12916c00661195c0a833d1ba9-sports-bike-icon_xj2HJTpeT.png?ik-sdk-version=javascript-1.4.3&updatedAt=1676742789495"
+                    <img src="https://ikp.edgekit.net/h1rxzpffx/swapecox/BikeIcon.webp"
                         alt="" />
                     <p>Rs. 3,000/Kg</p>
                     <p class="content">BIKE</p>
